# photo-culler

./: .gitignore  README.md  culler.spec  pyproject.toml  run_culler.py
culler/: app.py  appstate.py  bindings.py  cache.py  filetypes.py  filmstrip.py  image_view.py  library.py  loader.py  session.py  thumbnails.py  window.py
culler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
